--- a/regex.cbp
+++ b/regex.cbp
@@ -56,6 +56,9 @@
 		<Unit filename="Group/regex_new_group.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="String/regex_do_string.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="String/regex_free_string.c">
 			<Option compilerVar="CC" />
 		</Unit>
